--- a/Dashboard-2.css
+++ b/Dashboard-2.css
@@ -1,9 +1,6 @@
 *,*:before,*:after {
 	box-sizing: border-box;
     margin: 0;
-    padding: 0;
-    font-family: Verdana, Tahoma, sans-serif;
-	border: none;
 }
 
 :after {
@@ -731,4 +728,35 @@ img {
 
 .hypercube2{
 	color: black;
+	background-color: yellow;
+	width: 300px;
+	height: 100px;
+}
+
+.background-white {
+	background-color: white;
+}
+
+#myChart {
+        width: 200px;
+        height: 200px;
+}
+
+.canva{
+	margin: 10px auto;
+	width: 600px;
+	height: 300px;
+	background-color: blue;
+}
+
+.pie {
+	margin: 20px auto;
+	padding: 20px;
+	width: 600px;
+	height: 600px;
+}
+
+#pie {
+	margin: 10px;
+	padding: 20px;
 }
